# kor-travel-geo

./: .dockerignore  .env.dev.example  .env.example  .env.prod.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  SKILL.md  alembic.ini  antigravity.json  docker-compose.yml  openapi.json  opencode.json  pyproject.toml
.claude/: settings.json
.codex/: config.toml
.github/workflows/: ci.yml  openapi.yml
.opencode/agent/: frontend-developer.md  ui-fixer.md
alembic/: env.py
alembic/versions/: 0001_initial_postgis_schema.py  0001_spatialite_core.py  0001_text_primary_postgis_schema.py  0002_t027_shp_schema_fixups.py  0003_t032_performance_indexes.py  0004_t038_parcel_link_table.py  0005_t039_roadaddr_entrance_table.py  0006_t049_ops_metadata_schema.py  0007_t042_sppn_makarea.py  0008_pr34_review_followups.py  0009_t047_jibun_name_exact_index.py  0010_t047_search_exact_indexes.py  0011_t047_pg_stat_statements.py  0012_t053_consistency_case_samples.py  0013_t061_text_search_mv.py  0014_t065_navi_name_search.py  0015_t075_region_radius_parts.py  0016_t200_source_registry.py  0017_t206_consistency_seed.py  0018_t200_ops_id_rename.py  0019_t157_pg_stat_snapshots.py  0020_t171_fuzzy_ranking.py  0021_t158_slow_observability.py  0022_public_api_keys.py  0023_t290c_load_jobs_executor.py  0024_t290c_orphan_idx.py  0025_t290h_run_failure_alerts.py  0026_t290k_retire_in_process_executor.py  0026_t290k_retire_inproc.py
backend/: README.md  requirements.txt
backend/kraddr_geo_api/: __init__.py  config.py  database.py  ingest.py  main.py
debug-ui/: README.md  pyproject.toml  requirements.txt
debug-ui/src/kraddr_geo_debug_api/: config.py  database.py  main.py
debug-ui/web/: README.md  package-lock.json  package.json
debug-ui/web/src/components/: manual-load-panel.test.tsx
docker/: api.Dockerfile
docs/: address-db-schema.md  agent-failure-patterns.md  agent-guide.md  agent-workflow.md  ai-tooling.md  architecture.md  backend-package.md  backup-restore-orchestration.md  backup-restore-source-inventory.md  code-guide-for-beginners.md  codegraph-worktree.md  dagster-migration-plan.md  data-model.md  decisions.md  dev-environment-recovery.md  dev-environment.md  doc-consistency-audit-20260527.md  external-apis.md  frontend-package.md  geocoding-readiness.md  journal.md  juso_vworld_geo_reversegeo_data_review_20260516.docx  legal-dong-postgis-report.md  live-e2e.md  optional-source-usage-decision.md  ports.md  postmerge-review-fixups-pr114-pr115.md  postmerge-review-fixups-pr142-pr149.md  postmerge-review-fixups-pr20-pr22.md  postmerge-review-fixups-pr210-pr217.md  postmerge-review-fixups-pr23-latest.md  postmerge-review-fixups-pr34-latest.md  postmerge-review-fixups-pr384-pr392.md  postmerge-review-fixups-pr51-pr52.md  postmerge-review-fixups-pr53-pr64.md  postmerge-review-fixups-pr69-pr75.md  postmerge-review-fixups-pr69-pr80.md  postmerge-review-fixups-pr69-pr82.md  postmerge-review-fixups-pr69-pr86.md  postmerge-review-fixups-pr97-pr102.md  (+128 more)
docs/adr/: 001-postgres-postgis-primary-store.md  002-async-only-client.md  003-vworld-compatible-response.md  004-raw-sql-repository-over-orm.md  005-gdal-python-binding-loader.md  006-in-process-serial-load-queue.md  007-mv-geocode-target-one-entrance-per-building.md  008-pin-gdal-binding-to-system-version.md  009-epost-zip-quarterly-full-load.md  010-pnu-land-class-mapping-in-infra.md  011-load-jobs-table-persistence.md  012-text-canonical-plus-shp-polygon-hybrid.md  013-internal-only-ui-no-app-auth.md  (+51 more)
kor-travel-geo-dagster/: pyproject.toml
kor-travel-geo-dagster/docker/: dagster.Dockerfile  dagster.yaml
kor-travel-geo-dagster/src/kortravelgeo_dagster/: __init__.py  backup.py  backup_execute.py  backup_maintenance.py  consistency_execute.py  db_restore_execute.py  definitions.py  full_load_execute.py  load_job_bridge.py  mv.py  resources.py  source_rebuild_execute.py
kor-travel-geo-dagster/tests/: test_backup.py  test_backup_execute.py  test_backup_maintenance.py  test_consistency_execute.py  test_db_restore_execute.py  test_definitions.py  test_full_load_execute.py  test_load_job_bridge.py  test_mv_execute.py  test_source_rebuild_execute.py
kor-travel-geo-ui/: .env.local.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  SKILL.md  middleware.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
kraddr-geo-ui/: .dockerignore  .env.local.example  CHANGELOG.md  Dockerfile  README.md  SKILL.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
pykraddr/: __init__.py  data.py  legal_dong.py  models.py  postgis.py  store.py
scripts/: __init__.py  agent_env.sh  benchmark_api_latency.py  benchmark_backup_restore.py  benchmark_mv_refresh.py  benchmark_phase1_augment_performance.py  benchmark_query_performance.py  benchmark_source_registry_perf.py  capture_deployment_envelope.py  compare_building_shape_bundle.py  compare_extra_shape_layers.py  deploy_app.py  docker_app.sh  evaluate_t144_api_contract.py  evaluate_t162_cold_warm_ratio.py  evaluate_t164_p99_regression.py  export_openapi.py  frontend_check.sh  fullload_test.sh  run_geocoder_golden_corpus.py  run_phase1_augment_reports.py  run_sejong_live_pipeline.py  run_t125_c11_serving_preflight.py  run_t126_acceptance_followup.py  run_t129_c11_outlier_triage.py  run_t130_c11_regression_root_cause.py  run_t131_c11_guarded_policy_simulation.py  run_t132_c11_guarded_policy_validation.py  run_t133_c11_shadow_serving_rehearsal.py  run_t141_load_matrix.py  run_t146_postload_maintenance.py  run_t159_db_fault_injection.py  run_t162_runtime_warm.py  run_t213_live_pipeline.py
sql/: indexes.sql  mv.sql  postload.sql
tests/: test_api_database.py  test_client.py  test_data.py  test_legal_dong.py  test_manual_ingest_api.py  test_postgis.py  test_reverse.py  test_spatialite.py  test_store.py
web/: CLAUDE.md  README.md  package-lock.json  package.json
(+743 files in other folders)
