[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-kraddr-geo"
version = "0.1.0"
description = "한국 Juso 도로명주소 API와 데이터셋을 다루는 Python 클라이언트 및 적재 도구."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "digitie" }
]
keywords = ["juso", "korea", "address", "road-name-address", "business.juso.go.kr"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.7",
  "httpx>=0.27",
  "SQLAlchemy>=2.0",
]

[project.optional-dependencies]
spatialite = [
  "alembic>=1.13",
  "geopandas>=0.14",
  "py7zr>=0.21",
  "pyogrio>=0.8",
  "pyproj>=3.6",
  "shapely>=2.0",
]
dev = [
  "pytest>=8",
  "ruff>=0.5",
  "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["kraddr*"]
namespaces = true

[tool.setuptools.package-data]
"kraddr.geo" = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]
markers = [
  "live: tests that call real Juso servers and require JUSO_CONFM_KEY",
]
