[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-kraddr-geo"
version = "0.1.0"
description = "Korean address geocoding library and REST API backed by PostgreSQL/PostGIS."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "digitie" }]
keywords = ["korea", "address", "geocoding", "postgis", "vworld", "juso"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.5",
  "sqlalchemy[asyncio]>=2.0.35",
  "geoalchemy2>=0.15",
  "psycopg[binary,pool]>=3.2",
  "anyio>=4.5",
  "typer>=0.12",
  "httpx>=0.27",
  "tenacity>=9.0",
  "rapidfuzz>=3.10",
  "structlog>=24.4",
  "orjson>=3.10",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "prometheus-client>=0.21",
]
loaders = [
  "gdal>=3.8",
  "geopandas>=1.0",
  "shapely>=2.0",
  "fiona>=1.10",
  "pyogrio>=0.10",
]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-postgresql>=6.1",
  "testcontainers[postgres]>=4.8",
  "ruff>=0.7",
  "mypy>=1.13",
  "import-linter>=2.0",
  "hypothesis>=6.115",
]

[project.urls]
Repository = "https://github.com/digitie/python-kraddr-geo"
Issues = "https://github.com/digitie/python-kraddr-geo/issues"

[project.scripts]
kraddr-geo = "kraddr.geo.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
"kraddr.geo" = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
explicit_package_bases = true
mypy_path = "src"
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH", "RUF", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
"src/kraddr/geo/dto/address.py" = ["N815"]

[tool.importlinter]
root_package = "kraddr"

[[tool.importlinter.contracts]]
name = "Layered architecture"
type = "layers"
layers = [
  "api",
  "cli",
  "client",
  "loaders",
  "infra",
  "core",
  "dto",
]
containers = ["kraddr.geo"]
ignore_imports = ["kraddr.geo.api.routers.admin -> kraddr.geo.loaders"]
unmatched_ignore_imports_alerting = "none"
