[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kor-travel-geo"
version = "0.1.0"
description = "Korean address geocoding library and REST API backed by PostgreSQL/PostGIS."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0-only" }
authors = [{ name = "digitie" }]
keywords = ["korea", "address", "geocoding", "postgis", "vworld", "juso"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.5",
  "sqlalchemy[asyncio]>=2.0.35",
  "geoalchemy2>=0.15",
  "psycopg[binary,pool]>=3.2",
  "anyio>=4.5",
  "typer>=0.12",
  "httpx>=0.27",
  "tenacity>=9.0",
  "rapidfuzz>=3.10",
  "structlog>=24.4",
  "orjson>=3.10",
  "alembic>=1.13",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "prometheus-client>=0.21",
  "maxminddb>=2.6,<3",
]
# loaders extra는 시스템 GDAL(libgdal-dev)에 의존한다.
#   1) sudo apt install libgdal-dev gdal-bin
#   2) pip install "gdal==$(gdal-config --version)"   # 시스템 GDAL과 동일 버전으로 핀
#   3) pip install -e ".[loaders]"
# 운영/CI에서는 osgeo/gdal:* Docker 이미지를 베이스로 권장. 자세한 내용은
# docs/dev-environment.md 및 docs/decisions.md ADR-005, ADR-008 참조.
loaders = [
  "gdal>=3.8",
  "geopandas>=1.0",
  "shapely>=2.0",
  "fiona>=1.10",
  "pyogrio>=0.10",
]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-postgresql>=6.1",
  "testcontainers[postgres]>=4.8",
  "ruff>=0.7",
  "mypy>=1.13",
  "import-linter>=2.0",
  "hypothesis>=6.115",
  "pre-commit>=4.0",
]

[project.urls]
Repository = "https://github.com/digitie/kor-travel-geo"
Issues = "https://github.com/digitie/kor-travel-geo/issues"

[project.scripts]
ktgctl = "kortravelgeo.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
"kortravelgeo" = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
  "longrun: opt-in long-running integration/e2e tests",
]

[tool.mypy]
python_version = "3.12"
strict = true
explicit_package_bases = true
mypy_path = "src"
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH", "RUF", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
"alembic/**/*.py" = ["E501", "I001"]
"src/kortravelgeo/api/**/*.py" = ["A002", "B008", "TC001", "TC002", "TC003"]
"src/kortravelgeo/cli/main.py" = ["B008", "TC003"]
"src/kortravelgeo/client.py" = ["A002", "TC001", "TC002", "TC003"]
"src/kortravelgeo/core/*.py" = ["TC001", "TC002", "TC003"]
"src/kortravelgeo/dto/address.py" = ["N815"]
"src/kortravelgeo/dto/admin.py" = ["TC003"]
"src/kortravelgeo/dto/geocode.py" = ["A003", "TC001"]
"src/kortravelgeo/dto/reverse.py" = ["A003", "TC001"]
"src/kortravelgeo/dto/search.py" = ["A003", "TC001"]
"src/kortravelgeo/infra/*.py" = ["TC001", "TC002", "TC003"]
"src/kortravelgeo/loaders/**/*.py" = ["TC001", "TC002", "TC003"]
"tests/**/*.py" = ["ASYNC240"]

[tool.importlinter]
root_package = "kortravelgeo"

[[tool.importlinter.contracts]]
name = "Layered architecture"
type = "layers"
layers = [
  "api",
  "cli",
  "client",
  "loaders",
  "infra",
  "core",
  "dto",
]
containers = ["kortravelgeo"]
ignore_imports = ["kortravelgeo.api.routers.admin -> kortravelgeo.loaders"]
unmatched_ignore_imports_alerting = "none"
