[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-kraddr-geo-debug-ui"
version = "0.1.0"
description = "Debug FastAPI backend for inspecting python-kraddr-geo SQLite/SpatiaLite datasets."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "digitie" }
]
keywords = ["kraddr", "juso", "debug-ui", "fastapi", "spatialite"]
dependencies = [
  "python-kraddr-geo>=0.1.0",
  "fastapi>=0.124",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.38",
]

[project.optional-dependencies]
spatial = [
  "geopandas>=0.14",
  "pyproj>=3.6",
  "shapely>=2.0",
]
dev = [
  "pytest>=8",
  "ruff>=0.5",
]

[project.scripts]
kraddr-geo-debug-api = "kraddr_geo_debug_api.main:run"

[tool.setuptools.packages.find]
where = ["src"]
include = ["kraddr_geo_debug_api*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
