[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kortravelgeo-dagster"
version = "0.1.0"
description = "Dagster code location for kor-travel-geo backup/restore and ETL orchestration."
requires-python = ">=3.12"
license = { text = "GPL-3.0-only" }
authors = [{ name = "digitie" }]
keywords = ["kor-travel-geo", "dagster", "etl", "postgis", "geocoding"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  # Main library. Distribution name is ``kor-travel-geo``; the import root is
  # ``kortravelgeo``. The Dagster code location consumes the main lib one-way
  # (main lib stays Dagster-free — the boundary is enforced by packaging,
  # ADR-066 §6). Pinned like map pins ``kor-travel-map`` to its own version.
  "kor-travel-geo==0.1.0",
  "dagster>=1.9,<2",
  "dagster-webserver>=1.9,<2",
  "dagster-postgres>=0.25,<1",
  "boto3>=1.34,<2",
  "botocore>=1.34,<2",
  "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "mypy>=1.13",
]

[project.urls]
Repository = "https://github.com/digitie/kor-travel-geo"
Issues = "https://github.com/digitie/kor-travel-geo/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["kortravelgeo_dagster*"]
# Regular top-level package (has ``__init__.py``) — NOT a namespace package.
# ADR-066 §6 deliberately avoids ``pkgutil`` namespace magic for stability.
namespaces = false

[tool.setuptools.package-data]
"kortravelgeo_dagster" = ["py.typed"]

[tool.dagster]
module_name = "kortravelgeo_dagster.definitions"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Kept consistent with the repo root ``pyproject.toml`` select set.
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH", "RUF", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
# Dagster @op/@resource modules evaluate their ``context``/DTO type annotations at
# runtime (dagster-boundary §10: @op modules must NOT use
# ``from __future__ import annotations`` because Dagster validates the ``context``
# runtime type). Disable the type-checking-import moves (TC001-003) exactly as the
# repo root does for its runtime-type-heavy packages (infra/client/loaders).
"src/kortravelgeo_dagster/**/*.py" = ["TC001", "TC002", "TC003"]

[tool.mypy]
python_version = "3.12"
strict = true
explicit_package_bases = true
mypy_path = "src"
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
